--- a/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
+++ b/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
@@ -259,11 +259,11 @@
                         <viewControllerLayoutGuide type="bottom" id="GPw-rm-8D5"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="RIh-EY-eKX">
-                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Qio-s5-90v">
-                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="68g-vk-stF">
                                     <size key="itemSize" width="165" height="195"/>
@@ -338,6 +338,7 @@
                             <constraint firstItem="Qio-s5-90v" firstAttribute="top" secondItem="M4B-c9-lVg" secondAttribute="bottom" id="kub-Ss-Zoz"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="xuK-PK-hhj"/>
                     <connections>
                         <outlet property="collectionView" destination="Qio-s5-90v" id="pEk-KG-2XP"/>
                         <segue destination="wHx-Jf-i9c" kind="show" identifier="add" id="EQr-Yh-YH5"/>
@@ -727,7 +728,7 @@
                         <viewControllerLayoutGuide type="bottom" id="9wE-cF-xsk"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Fuo-G4-FmW">
-                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dE5-CT-NE5">
@@ -933,11 +934,11 @@
                         <viewControllerLayoutGuide type="bottom" id="v0V-FG-n88"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="cbj-Ob-GD1">
-                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zuU-fD-mKK">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kpq-vC-9hb">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="219"/>
@@ -1548,6 +1549,24 @@
             </objects>
             <point key="canvasLocation" x="1790" y="1023"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="T6U-MG-7Hg">
+            <objects>
+                <navigationController id="Atk-7Q-sYx" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="K5r-i0-EDV" customClass="ZXNavigationBar">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.1019607843" green="0.1176470588" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="AMh-ND-xUI" kind="relationship" relationship="rootViewController" id="ifr-aD-Otp"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kkQ-me-GW9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2430" y="1679"/>
+        </scene>
     </scenes>
     <resources>
         <image name="bg_selection" width="90" height="25"/>
@@ -1563,6 +1582,6 @@
         <image name="summary_ic_phone" width="12" height="12"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="EQr-Yh-YH5"/>
+        <segue reference="sI1-70-Mo9"/>
     </inferredMetricsTieBreakers>
 </document>
