--- a/Aier360/Controllers/校园/School.storyboard
+++ b/Aier360/Controllers/校园/School.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="XgD-dd-ezr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="XgD-dd-ezr">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -49,8 +49,8 @@
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="8OX-n2-7hj">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="215"/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gdP-FA-FCz">
-                                            <rect key="frame" x="15" y="179" width="42" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gdP-FA-FCz">
+                                            <rect key="frame" x="15" y="178" width="44" height="22"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
@@ -137,6 +137,111 @@
                                             <outlet property="hasNewLabel" destination="p97-Bz-gee" id="3tD-ei-Qhi"/>
                                             <outlet property="logoImage" destination="iJF-XJ-97a" id="ncl-03-C72"/>
                                             <outlet property="titleLabel" destination="cDD-8a-WpX" id="7An-TD-LWJ"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ZXSchoolMenuTableViewCell" rowHeight="201" id="P7C-Hc-zMW" customClass="ZXSchoolMenuTableViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="P7C-Hc-zMW" id="Ihm-t2-G1Y">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SQk-6e-bcy">
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="200"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ecp-9l-xB3">
+                                                        <size key="itemSize" width="100" height="100"/>
+                                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                    </collectionViewFlowLayout>
+                                                    <cells>
+                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ZXSchoolMenuCollectionViewCell" id="1mZ-OY-v5l" customClass="ZXSchoolMenuCollectionViewCell">
+                                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                                <autoresizingMask key="autoresizingMask"/>
+                                                                <subviews>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FDz-NT-UWd">
+                                                                        <rect key="frame" x="32" y="56" width="36" height="17"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                        <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="校园动态" translatesAutoresizingMaskIntoConstraints="NO" id="0lE-eo-5eF">
+                                                                        <rect key="frame" x="35" y="16" width="30" height="30"/>
+                                                                    </imageView>
+                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JGe-Cx-RXN">
+                                                                        <rect key="frame" x="55" y="16" width="10" height="10"/>
+                                                                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="height" constant="10" id="OQv-nc-Obg"/>
+                                                                            <constraint firstAttribute="width" constant="10" id="hc7-5f-Hjc"/>
+                                                                        </constraints>
+                                                                        <userDefinedRuntimeAttributes>
+                                                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                                                <integer key="value" value="5"/>
+                                                                            </userDefinedRuntimeAttribute>
+                                                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                                                        </userDefinedRuntimeAttributes>
+                                                                    </view>
+                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PyX-1J-kjk">
+                                                                        <rect key="frame" x="0.0" y="99" width="100" height="1"/>
+                                                                        <color key="backgroundColor" red="0.90980392156862744" green="0.90980392156862744" blue="0.90980392156862744" alpha="1" colorSpace="calibratedRGB"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="height" constant="1" id="2Op-T7-jci"/>
+                                                                        </constraints>
+                                                                    </view>
+                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vZd-5B-gnp">
+                                                                        <rect key="frame" x="99" y="0.0" width="1" height="99"/>
+                                                                        <color key="backgroundColor" red="0.90980392156862744" green="0.90980392156862744" blue="0.90980392156862744" alpha="1" colorSpace="calibratedRGB"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="width" constant="1" id="bKg-n2-b0N"/>
+                                                                        </constraints>
+                                                                    </view>
+                                                                </subviews>
+                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                            </view>
+                                                            <constraints>
+                                                                <constraint firstAttribute="centerX" secondItem="0lE-eo-5eF" secondAttribute="centerX" id="Aqz-Zp-t6K"/>
+                                                                <constraint firstItem="FDz-NT-UWd" firstAttribute="top" secondItem="0lE-eo-5eF" secondAttribute="bottom" constant="10" id="GaL-Ws-uCX"/>
+                                                                <constraint firstAttribute="bottom" secondItem="FDz-NT-UWd" secondAttribute="bottom" constant="27" id="Hhr-rm-oC7"/>
+                                                                <constraint firstAttribute="bottom" secondItem="PyX-1J-kjk" secondAttribute="bottom" id="Oil-e6-Irt"/>
+                                                                <constraint firstAttribute="centerX" secondItem="FDz-NT-UWd" secondAttribute="centerX" id="Sul-Wq-XSv"/>
+                                                                <constraint firstItem="JGe-Cx-RXN" firstAttribute="top" secondItem="0lE-eo-5eF" secondAttribute="top" id="U8P-hr-CR6"/>
+                                                                <constraint firstItem="JGe-Cx-RXN" firstAttribute="trailing" secondItem="0lE-eo-5eF" secondAttribute="trailing" id="cL9-I8-bdW"/>
+                                                                <constraint firstItem="PyX-1J-kjk" firstAttribute="leading" secondItem="1mZ-OY-v5l" secondAttribute="leading" id="dfJ-AT-CMR"/>
+                                                                <constraint firstItem="vZd-5B-gnp" firstAttribute="top" secondItem="1mZ-OY-v5l" secondAttribute="top" id="eNp-db-Nhh"/>
+                                                                <constraint firstItem="PyX-1J-kjk" firstAttribute="top" secondItem="vZd-5B-gnp" secondAttribute="bottom" id="w4X-pb-7cl"/>
+                                                                <constraint firstAttribute="trailing" secondItem="PyX-1J-kjk" secondAttribute="trailing" id="w6x-7t-MU7"/>
+                                                                <constraint firstAttribute="trailing" secondItem="vZd-5B-gnp" secondAttribute="trailing" id="z7E-Ud-5zM"/>
+                                                            </constraints>
+                                                            <connections>
+                                                                <outlet property="badgeView" destination="JGe-Cx-RXN" id="g3K-ML-Ech"/>
+                                                                <outlet property="horizonLine" destination="PyX-1J-kjk" id="Y9z-4F-2nz"/>
+                                                                <outlet property="iconImage" destination="0lE-eo-5eF" id="1Px-Q2-tfw"/>
+                                                                <outlet property="nameLabel" destination="FDz-NT-UWd" id="irB-me-Waa"/>
+                                                                <outlet property="virticalLine" destination="vZd-5B-gnp" id="ppD-0l-yQE"/>
+                                                            </connections>
+                                                        </collectionViewCell>
+                                                    </cells>
+                                                    <connections>
+                                                        <outlet property="dataSource" destination="P7C-Hc-zMW" id="reQ-3M-MdM"/>
+                                                        <outlet property="delegate" destination="P7C-Hc-zMW" id="EJu-kL-Pte"/>
+                                                    </connections>
+                                                </collectionView>
+                                            </subviews>
+                                            <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="SQk-6e-bcy" firstAttribute="top" secondItem="Ihm-t2-G1Y" secondAttribute="top" id="03P-5r-3r1"/>
+                                                <constraint firstAttribute="trailing" secondItem="SQk-6e-bcy" secondAttribute="trailing" id="Veu-tZ-grB"/>
+                                                <constraint firstItem="SQk-6e-bcy" firstAttribute="leading" secondItem="Ihm-t2-G1Y" secondAttribute="leading" id="YFp-dB-nwT"/>
+                                                <constraint firstAttribute="bottom" secondItem="SQk-6e-bcy" secondAttribute="bottom" id="fDW-Kd-7y4"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <outlet property="collectionView" destination="SQk-6e-bcy" id="UqL-RR-F17"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -444,5 +549,6 @@
         <image name="placeholder" width="75" height="75"/>
         <image name="school_bt_img" width="64" height="23"/>
         <image name="school_ic_tp" width="15" height="15"/>
+        <image name="校园动态" width="30" height="30"/>
     </resources>
 </document>
