--- a/Aier360/Controllers/联系人/Contacts.storyboard
+++ b/Aier360/Controllers/联系人/Contacts.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Q38-yk-Bn9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Q38-yk-Bn9">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -185,7 +185,7 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lnn-7F-9XY">
-                                                    <rect key="frame" x="65" y="10" width="520" height="20"/>
+                                                    <rect key="frame" x="65" y="17" width="520" height="20"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="13s-jd-8Ab"/>
                                                     </constraints>
@@ -193,30 +193,17 @@
                                                     <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WL6-GQ-fGQ">
-                                                    <rect key="frame" x="65" y="30" width="520" height="15"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="15" id="1zO-kR-HOe"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <color key="textColor" red="0.63137254899999995" green="0.61568627450000002" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="ymp-VH-57X" firstAttribute="top" secondItem="BVe-Uh-EZ8" secondAttribute="top" constant="10" id="7O9-NB-2LX"/>
                                                 <constraint firstItem="ymp-VH-57X" firstAttribute="leading" secondItem="BVe-Uh-EZ8" secondAttribute="leading" constant="15" id="BGA-dg-l7T"/>
                                                 <constraint firstAttribute="trailing" secondItem="Lnn-7F-9XY" secondAttribute="trailing" constant="15" id="G0e-ye-aZY"/>
-                                                <constraint firstItem="WL6-GQ-fGQ" firstAttribute="leading" secondItem="ymp-VH-57X" secondAttribute="trailing" constant="15" id="J8P-h3-qYm"/>
-                                                <constraint firstItem="Lnn-7F-9XY" firstAttribute="top" secondItem="BVe-Uh-EZ8" secondAttribute="top" constant="10" id="fok-vw-Ips"/>
-                                                <constraint firstAttribute="trailing" secondItem="WL6-GQ-fGQ" secondAttribute="trailing" constant="15" id="tJV-jd-gqk"/>
+                                                <constraint firstItem="Lnn-7F-9XY" firstAttribute="top" secondItem="BVe-Uh-EZ8" secondAttribute="top" constant="17" id="fok-vw-Ips"/>
                                                 <constraint firstItem="Lnn-7F-9XY" firstAttribute="leading" secondItem="ymp-VH-57X" secondAttribute="trailing" constant="15" id="zh2-Ak-eRC"/>
-                                                <constraint firstItem="WL6-GQ-fGQ" firstAttribute="top" secondItem="Lnn-7F-9XY" secondAttribute="bottom" id="zrz-hU-dqD"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
-                                            <outlet property="addressLabel" destination="WL6-GQ-fGQ" id="wSg-ga-SX1"/>
                                             <outlet property="logoImage" destination="ymp-VH-57X" id="1RS-8n-OFu"/>
                                             <outlet property="titleLabel" destination="Lnn-7F-9XY" id="dvo-9m-rZ8"/>
                                         </connections>
