--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -151,6 +151,30 @@
             </objects>
             <point key="canvasLocation" x="555" y="410"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="5ed-hJ-5yg">
+            <objects>
+                <viewController id="jfE-4p-OMG" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Rms-z3-50K"/>
+                        <viewControllerLayoutGuide type="bottom" id="1km-dy-jDk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="0TF-ek-fFE">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="dEz-Yd-DUh">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jtq-Cs-fIj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1191" y="410"/>
+        </scene>
     </scenes>
     <resources>
         <image name="announcement_read_gray" width="16" height="14"/>
