--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -837,11 +837,92 @@
             </objects>
             <point key="canvasLocation" x="1887" y="1073"/>
         </scene>
+        <!--Teacher Pick View Controller-->
+        <scene sceneID="Pxb-w8-3Af">
+            <objects>
+                <viewController storyboardIdentifier="ZXTeacherPickViewController" id="TWl-5U-mUN" customClass="ZXTeacherPickViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uuJ-0E-QRW"/>
+                        <viewControllerLayoutGuide type="bottom" id="4nv-9D-ZLo"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fec-pa-PKp">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="aat-pF-T5e">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ZXTeacherPickCell" rowHeight="50" id="aYk-p4-c3V" customClass="ZXTeacherPickCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aYk-p4-c3V" id="1rj-Hc-QJK">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="contact_female" translatesAutoresizingMaskIntoConstraints="NO" id="SzB-DN-Fi9">
+                                                    <rect key="frame" x="15" y="16" width="16" height="18"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oza-Ik-cbQ">
+                                                    <rect key="frame" x="46" y="15" width="40" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="announcement_teacherpick_bg" translatesAutoresizingMaskIntoConstraints="NO" id="y89-Pu-qap">
+                                                    <rect key="frame" x="569" y="17" width="16" height="16"/>
+                                                </imageView>
+                                                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="announcement_teacherpick_select" translatesAutoresizingMaskIntoConstraints="NO" id="IUX-dL-fwF">
+                                                    <rect key="frame" x="572" y="19" width="11" height="11"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="SzB-DN-Fi9" firstAttribute="leading" secondItem="1rj-Hc-QJK" secondAttribute="leading" constant="15" id="A6W-Dn-gl8"/>
+                                                <constraint firstAttribute="trailing" secondItem="y89-Pu-qap" secondAttribute="trailing" constant="15" id="B2u-28-JJ9"/>
+                                                <constraint firstAttribute="centerY" secondItem="SzB-DN-Fi9" secondAttribute="centerY" id="GbI-t5-xPy"/>
+                                                <constraint firstAttribute="centerY" secondItem="oza-Ik-cbQ" secondAttribute="centerY" id="Ius-PZ-QjG"/>
+                                                <constraint firstAttribute="centerY" secondItem="IUX-dL-fwF" secondAttribute="centerY" id="eKy-Tv-UWf"/>
+                                                <constraint firstAttribute="centerY" secondItem="y89-Pu-qap" secondAttribute="centerY" id="hUd-NL-Ep1"/>
+                                                <constraint firstItem="oza-Ik-cbQ" firstAttribute="leading" secondItem="1rj-Hc-QJK" secondAttribute="leading" constant="46" id="pbl-hf-ogk"/>
+                                                <constraint firstAttribute="trailing" secondItem="IUX-dL-fwF" secondAttribute="trailing" constant="17" id="taw-oe-syg"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <outlet property="headImage" destination="SzB-DN-Fi9" id="swP-Vy-ej2"/>
+                                            <outlet property="nameLabel" destination="oza-Ik-cbQ" id="byK-j8-cud"/>
+                                            <outlet property="remarkImageView" destination="IUX-dL-fwF" id="gpz-hr-ZDj"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="TWl-5U-mUN" id="a9w-i1-RnP"/>
+                                    <outlet property="delegate" destination="TWl-5U-mUN" id="JCl-zg-maO"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="aat-pF-T5e" secondAttribute="trailing" id="3Cl-v6-6mO"/>
+                            <constraint firstItem="aat-pF-T5e" firstAttribute="leading" secondItem="fec-pa-PKp" secondAttribute="leading" id="8nK-Do-tNk"/>
+                            <constraint firstItem="4nv-9D-ZLo" firstAttribute="top" secondItem="aat-pF-T5e" secondAttribute="bottom" id="W1s-V5-7ml"/>
+                            <constraint firstItem="aat-pF-T5e" firstAttribute="top" secondItem="fec-pa-PKp" secondAttribute="top" id="wTb-xY-aOx"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="aat-pF-T5e" id="Wzn-sd-Go0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EtZ-YS-7rf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2535" y="1073"/>
+        </scene>
     </scenes>
     <resources>
         <image name="announcement_read_gray" width="16" height="14"/>
         <image name="announcement_read_green" width="16" height="14"/>
+        <image name="announcement_teacherpick_bg" width="16" height="16"/>
         <image name="announcement_teacherpick_select" width="11" height="11"/>
+        <image name="contact_female" width="16" height="18"/>
         <image name="dynamic_ic_faved" width="16" height="14"/>
         <image name="head_default" width="149" height="149"/>
     </resources>
